// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmationModal should be rendered correctly 1`] = `
<DocumentFragment>
  <div
    class="container modalBlocker"
    style="z-index: 1;"
  >
    <div
      aria-label="Click to close a modal"
      class="uui-modal-blocker"
    />
    <div
      aria-modal="true"
      class="uui-modal-window root modal container"
      role="dialog"
      style="width: 420px; height: auto; max-height: var(--uui-modals-max-height);"
    >
      <div
        class="root modalHeader uui-modal-header borderBottom"
      >
        <div
          class="uui-modal-title uui-typography"
        >
          Test
        </div>
        <div
          class="flexSpacer"
        />
        <div
          class="flexCell"
          style="min-width: 0; flex-shrink: 0; flex-basis: auto;"
        >
          <button
            aria-label="Close modal"
            class="uui-button-box uui-enabled -clickable container uui-icon_button uui-color-neutral root"
            tabindex="0"
            type="button"
          >
            <div
              class="container uui-icon uui-enabled"
            >
              <svg
                class=""
              />
            </div>
          </button>
        </div>
      </div>
      <div
        class="root uui-scroll-bars uui-shadow-top uui-shadow-bottom"
        style="position: relative; overflow: hidden; width: 100%; height: 100%; display: flex;"
      >
        <div
          style="position: relative; top: 0px; left: 0px; right: 0px; bottom: 0px; overflow: scroll; margin-right: 0px; margin-bottom: 0px; flex: 1 1 auto;"
        >
          <div
            class="uui-panel root margin-24 uui-surface-main container"
          >
            <div>
              Test content
            </div>
          </div>
        </div>
        <div
          class="uui-track-horizontal"
          style="position: absolute; height: 6px; display: none;"
        >
          <div
            class="uui-thumb-horizontal"
          />
        </div>
        <div
          class="uui-track-vertical"
          style="position: absolute; width: 6px; display: none;"
        >
          <div
            class="uui-thumb-vertical"
          />
        </div>
      </div>
      <div
        class="root modalFooter uui-modal-footer footer"
      >
        <button
          class="uui-button-box uui-enabled -clickable container root uui-button uui-fill-outline uui-color-secondary uui-size-36"
          tabindex="0"
          type="button"
        >
          <div
            class="uui-caption"
          >
            Discard
          </div>
        </button>
        <button
          class="uui-button-box uui-enabled -clickable container root uui-button uui-fill-solid uui-color-primary uui-size-36"
          tabindex="0"
          type="button"
        >
          <div
            class="uui-caption"
          >
            Save
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ConfirmationModal should be rendered correctly without body 1`] = `
<DocumentFragment>
  <div
    class="container modalBlocker"
    style="z-index: 1;"
  >
    <div
      aria-label="Click to close a modal"
      class="uui-modal-blocker"
    />
    <div
      aria-modal="true"
      class="uui-modal-window root modal container"
      role="dialog"
      style="width: 420px; height: auto; max-height: var(--uui-modals-max-height);"
    >
      <div
        class="root modalHeader uui-modal-header borderBottom"
      >
        <div
          class="uui-modal-title uui-typography"
        >
          Test
        </div>
        <div
          class="flexSpacer"
        />
        <div
          class="flexCell"
          style="min-width: 0; flex-shrink: 0; flex-basis: auto;"
        >
          <button
            aria-label="Close modal"
            class="uui-button-box uui-enabled -clickable container uui-icon_button uui-color-neutral root"
            tabindex="0"
            type="button"
          >
            <div
              class="container uui-icon uui-enabled"
            >
              <svg
                class=""
              />
            </div>
          </button>
        </div>
      </div>
      <div
        class="root uui-scroll-bars uui-shadow-top uui-shadow-bottom"
        style="position: relative; overflow: hidden; width: 100%; height: 100%; display: flex;"
      >
        <div
          style="position: relative; top: 0px; left: 0px; right: 0px; bottom: 0px; overflow: scroll; margin-right: 0px; margin-bottom: 0px; flex: 1 1 auto;"
        />
        <div
          class="uui-track-horizontal"
          style="position: absolute; height: 6px; display: none;"
        >
          <div
            class="uui-thumb-horizontal"
          />
        </div>
        <div
          class="uui-track-vertical"
          style="position: absolute; width: 6px; display: none;"
        >
          <div
            class="uui-thumb-vertical"
          />
        </div>
      </div>
      <div
        class="root modalFooter uui-modal-footer footer"
      >
        <button
          class="uui-button-box uui-enabled -clickable container root uui-button uui-fill-outline uui-color-secondary uui-size-36"
          tabindex="0"
          type="button"
        >
          <div
            class="uui-caption"
          >
            Discard
          </div>
        </button>
        <button
          class="uui-button-box uui-enabled -clickable container root uui-button uui-fill-solid uui-color-primary uui-size-36"
          tabindex="0"
          type="button"
        >
          <div
            class="uui-caption"
          >
            Save
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
